[package]
name = "my_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1"
regex = "1"
utils = { path = "../utils"}
